trabajo con los estilos de -cronograma- agrego una pequeña transicion en -contacto-

--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -91,14 +91,16 @@
 
         </div>
 
+        <!--Segundo navegador-->
         <div class="second-nav">
             <ul>
                 <li><a href="#clases">Clases</a></li>
                 <li><a href="#orquestas">Orquestas</a></li>
                 <li><a href="#ejmc">Encuentro Juvenil de Música de cámara</a></li>
-                <li><a href="#inicio">Arriba</a></li>
             </ul>
         </div>
+
+        <!--Contenido-->
 
         <section id="clases" class="text__section">
             <h2>Clases de instrumentos</h2>
@@ -143,7 +145,7 @@
                     +54 9 294-460-7870
                 </a>
                 o llenar el formulario de contacto
-                <a class="italic focus" href="./pages/contacto.html">
+                <a class="italic focus" href="./contacto.html">
                     acá
                 </a>
 
@@ -287,6 +289,26 @@
                 </p>
 
             </div>
+
+            <ul class="footer__ul nav justify-content-start">
+                <li class="nav-item">
+                    <a class="nav-link px-2" href="https://www.instagram.com/musicamarajuvenil/"
+                        target="_blank"><img src="../assets/icons/bxl-instagram.svg">@musicamarajuvenil
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link px-2" href="https://www.facebook.com/EJMCbariloche"
+                        target="_blank"><img src="../assets/icons/bxl-facebook-circle.svg">EJMCbariloche FB
+                    </a>
+                </li>
+
+                <li>
+                    <a class="nav-link px-2" href="mailto:ejmcbariloche@gmail.com">
+                        <img src="../assets/icons/bxs-correo.svg">ejmcbariloche@gmail.com
+                    </a>
+                </li>
+
+            </ul>
 
 
             <div class="orquesta__img">
