--- a/pages/cronograma.html
+++ b/pages/cronograma.html
@@ -7,7 +7,7 @@
     <!--bootstrap-->
     <link rel="stylesheet" href="../css/bootstrap.css">
     <!--mis estilos-->
-    <link rel="stylesheet" href="../styles/cronograma.css">
+    <link rel="stylesheet" href="../styles/styles.css">
 
     <!--Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
     <meta name="description" content="Promoviendo la educación musical en Bariloche, brinda más de 20 presentaciones 
     al año tanto en Bariloche como en localidades aledañas">
 
-    <meta name="keywords" content="música, cultura, espectáculo, concierto, orquesta juvenil">
+    <meta name="keywords" content="música, cultura, espectáculo, concierto, orquesta juvenil, música clásica, música de cámara">
 
 
     <title>Cofradía | Cronograma</title>
