--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Bootstrap-->
     <link rel="stylesheet" href="../css/bootstrap.css">
+    <!--Mis estilos-->
     <link rel="stylesheet" href="../styles/styles.css">
 
     <!--Fuentes-->
