--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--bootstrap-->
-    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../bootstrap/bootstrap.css">
 
     <!--mis estilos-->
     <link rel="stylesheet" href="../styles/styles.css">
