pequeñas optimizaciones y aplicacion de correcciones de la preentrega -redimencion de imágenes, eliminacion de espacios innecesarios

--- a/index.html
+++ b/index.html
@@ -8,32 +8,24 @@
     <link rel="stylesheet" href="./bootstrap/bootstrap.css">
     <!--mis estilos-->
     <link rel="stylesheet" href="./styles/styles.css">
-
     <!-- Fuentes  -->
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,300;0,400;0,500;0,700;0,800;0,900;1,300;1,400&display=swap"
         rel="stylesheet">
-
     <link
         href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap"
         rel="stylesheet">
-
     <!--meta: description, keywords -->
     <meta name="description" content="Promoviendo la educación musical en Bariloche, con más de 20 años de trayectoria">
-
     <meta name="keywords" content="música, clases, educación, cultura, espectáculo, concierto, juvenil">
-
+    <!--title-->
     <title>Cofradía</title>
-
     <!--favicon-->
     <link rel="icon" type="image/x-icon" sizes="32x32" href="./assets/icons/favicon_package_v0.16/favicon.ico">
-
 </head>
-
 <body>
     <!-- Nav y header-->
     <header class="px-4 border-bottom">
@@ -42,69 +34,47 @@
                 <a class="logo navbar-brand" href="./index.html">
                     <img src="./assets/img/logo-cofradia-removebg.png" alt="Logo Cofradia">
                 </a>
-                
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
                 <div class="collapse navbar-collapse" id="navbarNav">
-
                     <ul class="nav__ul navbar-nav ms-auto mb-2 mb-md-0">
-
                         <li class="nav-item">
                             <a class="activo nav-link text-secondary" href="#">Inicio</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-black" href="./pages/orquesta.html">La Orquesta</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-black" href="./pages/actividades.html">Actividades</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-black" href="./pages/cronograma.html">Cronograma</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-black" href="./pages/contacto.html">Contacto</a>
                         </li>
-
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-
+    <!--fin header-->
     <!-- seccion-principal -->
     <main>
-
         <section class="index__portada">
-
             <div class="portada-texto">
                 <h1>Orquesta Juvenil Cofradía</h1>
-
                 <p> Promoviendo la educación musical</p>
-
                 <p> Con más de veinte años de trayectoria </p>
-
             </div>
-
         </section>
-
-
         <section>
-
             <div class="section__div">
-
                 <h2>Aprender</h2>
-
                 <div class="descripcion">
-
                     <div class="descripcion-texto">
-
                         <p class="italic">
                             Clases personalizadas y adaptadas a las necesidades y metas
                             individuales de quienes deseen
@@ -112,8 +82,6 @@
                             a tocar el Violin, la Viola, el Violoncello,
                             el Contrabajo o el Piano
                         </p>
-
-
                         <p>
                             Si querés tomar clases de alguno de estos instrumentos podes escribirnos a
                             <a class="italic" href="mailto:fundacion.cofradia@gmail.com">
@@ -128,25 +96,17 @@
                                 acá
                             </a>
                         </p>
-
                     </div>
-
                     <div class="descripcion-img">
                         <img src="./assets/img/violin-stradivarius-1920-3.webp" class="img-thumbnail" alt="violin">
                     </div>
                 </div>
-
             </div>
-
         </section>
-
-
         <section>
             <div class="section__div">
                 <h2>La Orquesta</h2>
-
                 <div class="descripcion">
-
                     <div class="descripcion-texto">
                         <p>
                             Con más de 20 años de actividad se ha convertido en un
@@ -154,15 +114,11 @@
                         </p>
 
                     </div>
-
                     <div class="descripcion-img">
-
                         <img src="./assets/img/orquesta-tedx.jpg" class="img-thumbnail"
                             alt="orquesta en charla TedEx Bariloche">
                     </div>
-
                     <div class="descripcion-texto">
-
                         <p>
                             Formada por niños y adolescentes que estudian violín, viola, violoncello y
                             contrabajo,
@@ -170,29 +126,22 @@
                             alrededor
                             de 20 presentaciones anuales tanto en Bariloche como en ciudades aledañas.
                         </p>
-
                         <p>
                             También trabaja en conjunto con otras agrupaciones musicales locales lo que
                             enriquece
                             tanto la experiencia de los participantes como de la comunidad en general.
                         </p>
                     </div>
-
                     <div class="descripcion-img">
                         <img src="./assets/img/orestaycoro.jpg" class="img-thumbnail" alt="orquesta y coro">
                     </div>
-
-
                 </div>
             </div>
-
         </section>
-
         <section>
             <div class="section__div">
                 <h2>Encuentro Juvenil de Música de Cámara</h2>
                 <div class="descripcion">
-
                     <div class="descripcion-texto">
                         <p>
                             Uno de los proyectos más significativos que se realizan en el marco de la Orquesta es el
@@ -200,12 +149,10 @@
                             Juvenil de Música de Cámara.
                         </p>
                     </div>
-
                     <div class="descripcion-img">
                         <img src="./assets/img/cuarteto-camara.jpg" class="img-thumbnail"
                             alt="Cuarteto juvenil de cuerdas">
                     </div>
-
                     <div class="descripcion-texto">
                         <p>
                             Esta iniciativa convoca a jóvenes músicos de diversas localidades promoviendo el desarrollo
@@ -216,70 +163,52 @@
                             colaboración musical.
                         </p>
                     </div>
-
                     <div class="descripcion-img">
                         <img src="./assets/img/duo-cello-piano.jpg" class="img-thumbnail"
                             alt="Duo de violoncello y piano">
                     </div>
-
                 </div>
             </div>
         </section>
-
-
         <div class="abajo">
             <div class="boton_la-orquesta">
                 <a href="./pages/orquesta.html">La Orquesta</a>
             </div>
             <img class="img-fluid" src="./assets/img/orquesta-blanconegro.jpg" alt="orquesta">
         </div>
-
-
     </main>
-
     <!--Footer-->
     <div class="container-flex">
         <footer class="py-3 my-4 bg-secondary">
-
             <p class="text-center ">Desde 1995</p>
-
             <ul class="footer__ul nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item">
                     <a class="nav-link px-2 text-body-secondary"
-                        href="https://instagram.com/orquesta_cofradia?igshid=MzRlODBiNWFlZA==" target="_blank"><img
-                            src="./assets/icons/bxl-instagram.svg"></a>
+                        href="https://www.instagram.com/orquesta_cofradia/" target="_blank"><img
+                            src="./assets/icons/bxl-instagram.svg" alt="enlace a instagram"></a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link px-2 text-body-secondary"
                         href="https://www.facebook.com/profile.php?id=100063644704595" target="_blank"><img
-                            src="./assets/icons/bxl-facebook-circle.svg"></a>
+                            src="./assets/icons/bxl-facebook-circle.svg" alt="enlace a facebook"></a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link px-2 text-body-secondary"
                         href="https://www.youtube.com/@fundacioncofradiafundacion9782" target="_blank"><img
-                            src="./assets/icons/bxl-youtube.svg"></a>
+                            src="./assets/icons/bxl-youtube.svg" alt="enlace a youtube"></a>
                 </li>
             </ul>
-
             <p class="text-center ">Bariloche, Río Negro</p>
-
         </footer>
     </div>
-
-
+    <!--fin del footer-->
     <!--Scripts-->
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
-
-
-
 </body>
 
 </html>
