--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -4,43 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!--bootstrap-->
     <link rel="stylesheet" href="../bootstrap/bootstrap.css">
-
     <!--mis estilos-->
     <link rel="stylesheet" href="../styles/styles.css">
-
     <!--Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,300;0,400;0,500;0,700;0,800;0,900;1,300;1,400&display=swap"
         rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap"
         rel="stylesheet">
-
     <!--meta: description, keywords -->
     <meta name="description" content="Promoviendo la educación musical en Bariloche, 
         diversas actividades enfocadas en el desarrollo musical de niños y jóvenes">
-
     <meta name="keywords" content="música, educación, clases, actividades juveniles">
-
+    <!--tittle-->
     <title>Cofradía | Actividades</title>
-
     <!--favicon-->
     <link rel="icon" type="image/x-icon" sizes="32x32" href="../assets/icons/favicon_package_v0.16/favicon.ico">
-
 </head>
-
-
-
+<!--body-->
 <body>
     <!-- Nav y header-->
     <header class="px-4 border-bottom actividades__header">
@@ -53,45 +40,36 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
                 <div class="collapse navbar-collapse" id="navbarNav">
-
                     <ul class="nav__ul navbar-nav ms-auto mb-2 mb-md-0">
-
                         <li class="nav-item">
                             <a class="nav-link text-black" href="../index.html">Inicio</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-black" href="./orquesta.html">La Orquesta</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="activo nav-link text-secondary" href="#">Actividades</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-black" href="./cronograma.html">Cronograma</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-black" href="./contacto.html">Contacto</a>
                         </li>
-
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-
+    <!--fin del header-->
+    <!--comienza el main-->
     <main>
-
         <div class="actividades__portada">
             <h1>Actividades</h1>
 
         </div>
-
-        <!--Segundo navegador-->
+        <!--Navegador del contenido-->
         <div class="second-nav">
             <ul>
                 <li><a href="#clases">Clases</a></li>
@@ -99,42 +77,31 @@
                 <li><a href="#ejmc">Encuentro Juvenil de Música de cámara</a></li>
             </ul>
         </div>
-
         <!--Contenido-->
-
         <section id="clases" class="text__section">
             <h2>Clases de instrumentos</h2>
-
-
-
             <div>
                 <p>
                     Con un enfoque hacia la música clásica, se brindan clases personalizadas y adaptadas a las
                     necesidades y metas individuales de quienes deseen aprender a tocar el Violín, la Viola, el
                     Violoncello, el Contrabajo o el Piano
                 </p>
-
                 <div class="actividades__img">
                     <img class="img-thumbnail" src="../assets/img/clase-grupal.jpg" alt="Orquesta de niños">
                 </div>
-
             </div>
-
-
             <p>
                 Los alumnos tienen la posibilidad de participar de diferentes agrupaciones y contar con espacios
                 donde presentar los avances obtenidos en vivo. Cada año se realizan dos muestras en las cuales los
                 estudiantes tienen la oportunidad de vivir la experiencia de compartir frente a un público la música
                 que han estado aprendiendo.
             </p>
-
             <p>
                 Además, los estudiantes jóvenes más avanzados tienen la oportunidad de ser seleccionados para formar
                 parte de la Orquesta de Cámara Juvenil Cofradía. Esta orquesta realiza múltiples presentaciones a lo
                 largo del año y ha sido el punto de partida de músicos que ahora forman parte de prestigiosas
                 orquestas tanto a nivel nacional como internacional
             </p>
-
             <p>
                 Si querés más info o tomar clases de alguno de estos instrumentos podes escribirnos a
                 <a class="italic" href="mailto:fundacion.cofradia@gmail.com">
@@ -148,115 +115,76 @@
                 <a class="italic focus" href="./contacto.html">
                     acá
                 </a>
-
-
         </section>
-
         <section id="orquestas" class="text__section">
             <h2>Orquestas</h2>
-
-
             <div class="orquesta__img">
                 <img src="../assets/img/orquesta-2.jpg" alt="Orquesta con violin solista">
             </div>
-
-
-
-
             <h3>Orquesta de Cámara Juvenil Cofradía</h3>
-
             <p>
                 Enfocada en enseñar música y cultivar el talento de sus jóvenes miembros, esta formada por
                 niños y adolescentes que estudian violín, viola, violoncello y contrabajo.
             </p>
-
             <div>
-
                 <div class="actividades__img">
                     <img class="img-thumbnail" src="../assets/img/orquesta-en-concierto.jpg"
                         alt="Orquesta de en concierto">
                 </div>
-
                 <p>
                     Su función específica es complementar la instrucción musical a partir de la actividad
                     grupal, especialmente la práctica orquestal, para un adecuado desarrollo técnico y
                     expresivo, fomentando las interacciones humanas, el trabajo en equipo y el sentido de
                     responabilidad y pertenencia.
                 </p>
-
             </div>
-
-
-
             <p>
                 Por esto mismo también trabaja en conjunto y realiza presentaciones con otras organizaciones
-                musicales de la zona y del resto del país como ser:</p>
-
+                musicales de la zona y del resto del país como ser:
+            </p>
             <ul>
                 <li>Coro de Niños y Jóvenes Cantores Bariloche</li>
                 <li>Coro Juvenil municipal Bariloche</li>
                 <li>Sinfónica Juvenil Nacional José de San Martín</li>
                 <li>Orquesta Filarmónica Río Negro</li>
             </ul>
-
-
             <h3>TOI (Taller Orquestal de Iniciación)</h3>
-
-
             <div>
-
                 <div class="actividades__img">
                     <img class="img-thumbnail" src="../assets/img/orquesta-peques.jpg" alt="Orquesta de niños">
                 </div>
-
                 <p>
                     Dentro del Proyecto Cofradía, se presenta una actividad de iniciación, especialmente
                     pensada para los más pequeños, donde se introduce a los niños en el mundo de la
                     música orquestal a través de instrumentos de cuerdas frotadas.
                 </p>
-
             </div>
-
-
-
             <p>
                 La modalidad de trabajo incluye clases individuales de instrumento, una instrucción
                 teórico-práctica en el lenguaje musical como complemento, y la práctica orquestal
                 desde el comienzo del aprendizaje, adaptada para que los niños disfruten del
                 proceso.
             </p>
-
-
             <div>
-
                 <p>
                     Para que los niños puedan comenzar su viaje musical, se dispone de una dotación
                     básica de instrumentos, que al principio se entregan en préstamo para prácticas
                     individuales y grupales. Con el tiempo, los instrumentos serán reemplazados a medida
                     que cada estudiante vaya adquiriendo su propio instrumento.
                 </p>
-
                 <div class="actividades__img">
                     <img class="img-thumbnail" src="../assets/img/instrumentos1-removebg-preview.png"
                         alt="varios instrumentos de cuerdas">
                 </div>
-
             </div>
-
-
-
             <p>
                 La metodología es la misma que tiene un gran éxito con los miembros de la Orquesta
                 de Cámara Juvenil Cofradía desde su creación y está diseñada para que los niños
                 disfruten al máximo de su experiencia musical."
             </p>
-
-
         </section>
-
         <section id="ejmc" class="text__section">
             <h2>Encuentro Juvenil de Música de Cámara</h2>
-
             <div>
                 <div class="actividades__img">
                     <img class="img-thumbnail" src="../assets/img/concierto-para-dos-gitarras.jpg" alt="orquesta con guitarras">
@@ -266,30 +194,22 @@
                     general, con el propósito de enriquecer tanto su experiencia musical como su desarrollo personal a
                     través de la hermosa práctica de la Música de Cámara.
                 </p>
-    
             </div>
-
-           
             <p>
                 Este proyecto no tiene fronteras regionales, ya que busca fomentar la creación de vínculos y relaciones
                 significativas entre participantes de diferentes lugares.
             </p>
-
             <div>
-
                 <div class="actividades__img">
                     <img class="img-thumbnail" src="../assets/img/actividad-ejmc.jpg" alt="actividad del encuentro">
                 </div>
-
                 <p>
                     El programa incluye clases grupales, actividades didácticas interdisciplinarias y conciertos
                     abiertos al público. Estamos comprometidos en brindar una experiencia enriquecedora tanto para
                     músicos
                     jóvenes como para amantes de la música en general.
                 </p>
-
             </div>
-
             <ul class="footer__ul nav justify-content-start">
                 <li class="nav-item">
                     <a class="nav-link px-2" href="https://www.instagram.com/musicamarajuvenil/"
@@ -301,69 +221,50 @@
                         target="_blank"><img src="../assets/icons/bxl-facebook-circle.svg">EJMCbariloche FB
                     </a>
                 </li>
-
                 <li>
                     <a class="nav-link px-2" href="mailto:ejmcbariloche@gmail.com">
                         <img src="../assets/icons/bxs-correo.svg">ejmcbariloche@gmail.com
                     </a>
                 </li>
-
             </ul>
-
-
             <div class="orquesta__img">
                 <img src="../assets/img/concierto-m-camara.jpg" alt="Orquesta con violin solista">
             </div>
-
-
-
         </section>
-
-
-
         <div>
             <img src="s" alt="">
         </div>
-
-
         </section>
     </main>
-
+    <!--fin de sección principal-->
     <!--Footer-->
     <div class="container-flex">
         <footer class="py-3 my-4 bg-secondary">
-
             <p class="text-center ">Desde 1995</p>
-
             <ul class="footer__ul nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a class="nav-link px-2 text-body-secondary"
-                        href="https://instagram.com/orquesta_cofradia?igshid=MzRlODBiNWFlZA==" target="_blank"><img
-                            src="../assets/icons/bxl-instagram.svg"></a>
+                        href="https://www.instagram.com/orquesta_cofradia/" target="_blank"><img
+                            src="../assets/icons/bxl-instagram.svg" alt="enlace a instagram"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link px-2 text-body-secondary"
                         href="https://www.facebook.com/profile.php?id=100063644704595" target="_blank"><img
-                            src="../assets/icons/bxl-facebook-circle.svg"></a>
+                            src="../assets/icons/bxl-facebook-circle.svg" alt="enlace a facebook"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link px-2 text-body-secondary"
                         href="https://www.youtube.com/@fundacioncofradiafundacion9782" target="_blank"><img
-                            src="../assets/icons/bxl-youtube.svg"></a>
+                            src="../assets/icons/bxl-youtube.svg" alt="enlace a youtube"></a>
                 </li>
             </ul>
-
             <p class="text-center ">Bariloche, Río Negro</p>
-
         </footer>
+        <!--fin del footer-->
     </div>
-
-
     <!--Scripts-->
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-
 
 </body>
 
