--- a/pages/cronograma.html
+++ b/pages/cronograma.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="../bootstrap/bootstrap.css">
     <!--mis estilos-->
     <link rel="stylesheet" href="../styles/styles.css">
-
     <!--Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,22 +18,17 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap"
         rel="stylesheet">
-
     <!--meta: description, keywords -->
     <meta name="description" content="Promoviendo la educación musical en Bariloche, brinda más de 20 presentaciones 
     al año tanto en Bariloche como en localidades aledañas">
-
-    <meta name="keywords" content="música, cultura, espectáculo, concierto, orquesta juvenil, música clásica, música de cámara">
-
-
+    <meta name="keywords"
+        content="música, cultura, espectáculo, concierto, orquesta juvenil, música clásica, música de cámara">
     <title>Cofradía | Cronograma</title>
-
     <!--favicon-->
     <link rel="icon" type="image/x-icon" sizes="32x32" href="../assets/icons/favicon_package_v0.16/favicon.ico">
-
 </head>
 
-<body>
+<body class="cronograma__body">
     <header class="px-4 border-bottom">
         <nav class="nav navbar navbar-expand-md">
             <div class="container-fluid">
@@ -46,27 +40,21 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="nav__ul navbar-nav ms-auto mb-2 mb-md-0">
-
                         <li class="nav-item">
                             <a class="nav-link text-black" href="../index.html">Inicio</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-black" href="./orquesta.html">La Orquesta</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-black" href="./actividades.html">Actividades</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="activo nav-link text-secondary" href="#">Cronograma</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-black" href="./contacto.html">Contacto</a>
                         </li>
-
                     </ul>
                 </div>
             </div>
@@ -74,14 +62,10 @@
     </header>
 
     <main class="container-fluid">
-
         <div class="portada_cronograma">
             <h1>Cronograma</h1>
-
         </div>
-
         <section class="cronograma ">
-
             <div class="row">
                 <div class="evento col-12">
                     <div>
@@ -92,28 +76,25 @@
                         <ul class="footer__ul nav justify-content-start">
                             <li class="nav-item">
                                 <a class="nav-link px-2" href="https://www.instagram.com/musicamarajuvenil/"
-                                    target="_blank"><img src="../assets/icons/bxl-instagram.svg">
+                                    target="_blank"><img src="../assets/icons/bxl-instagram.svg"
+                                        alt="instagram del encuentro de música de cámara">
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link px-2" href="https://www.facebook.com/EJMCbariloche"
-                                    target="_blank"><img src="../assets/icons/bxl-facebook-circle.svg">
+                                    target="_blank"><img src="../assets/icons/bxl-facebook-circle.svg"
+                                        alt="facebook del encuentro de música de cámara">
                                 </a>
                             </li>
-
                         </ul>
                     </div>
-
                     <div>
                         <a target="_blank" href="../assets/img/eventos/ejmc-dic-2022.jpg">
                             <img src="../assets/img/eventos/ejmc-dic-2022.jpg" class="img-fluid" alt="evento próximo">
                         </a>
-
                     </div>
-
                 </div>
             </div>
-
             <div class="row">
                 <div class="evento col-xl-8 col-md-6 col-sm-12">
                     <h3>Concierto Música de Cámara</h3>
@@ -124,10 +105,8 @@
                         <img src="../assets/img/eventos/sabdao-3-dic-ejmc.jpg" class="img-fluid" alt="afiche">
                     </a>
                 </div>
-
                 <div class="evento col-xl-4 col-md-6 col-sm-12">
                     <h3>Concierto Música de Cámara "Debussy"</h3>
-
                     <p>Trio Sica en concierto</p>
                     <ul>
                         <li>Valentina Sica - Violin</li>
@@ -139,15 +118,11 @@
                     <a target="_blank" href="../assets/img/eventos/18-01-2020.jpg">
                         <img src="../assets/img/eventos/18-01-2020.jpg" class="img-fluid" alt="afiche">
                     </a>
-
                 </div>
             </div>
-
-
             <div class="row">
                 <div class="evento col-xl-6 col-md-6 col-sm-12 ">
                     <h3>Concierto de fin de Año</h3>
-
                     <p>Catedral Nuestra Señora del Nahuel Huapi</p>
                     <p>Jueves 14 de diciembre 2017 - 20:30 - Catedral Nuestra Señora del Nahuel Huapi</p>
                     <p>Entrada libre y gratuita</p>
@@ -155,63 +130,46 @@
                         <img src="../assets/img/eventos/concierto-final-cofradia2017.jpg" class="img-fluid"
                             alt="afiche">
                     </a>
-
                 </div>
-
                 <div class="evento col-xl-6 col-md-6 col-sm-12">
                     <h3>Concierto de fin de Año</h3>
-
                     <p>Catedral Nuestra Señora del Nahuel Huapi</p>
                     <p>viernes 16 de diciembre 2016 - 21:00 - Catedral Nuestra Señora del Nahuel Huapi</p>
                     <p>Entrada libre y gratuita</p>
                     <a target="_blank" href="../assets/img/eventos/20-16-2016.jpg">
                         <img src="../assets/img/eventos/20-16-2016.jpg" class="img-fluid" alt="afiche">
                     </a>
-
                 </div>
             </div>
-
         </section>
-
     </main>
-
-
     <!--Footer-->
     <div class="container-flex">
         <footer class="py-3 my-4 bg-secondary">
-
             <p class="text-center ">Desde 1995</p>
-
             <ul class="footer__ul nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a class="nav-link px-2 text-body-secondary"
-                        href="https://instagram.com/orquesta_cofradia?igshid=MzRlODBiNWFlZA==" target="_blank"><img
-                            src="../assets/icons/bxl-instagram.svg"></a>
+                        href="https://www.instagram.com/orquesta_cofradia/" target="_blank"><img
+                            src="../assets/icons/bxl-instagram.svg" alt="enlace a instagram"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link px-2 text-body-secondary"
                         href="https://www.facebook.com/profile.php?id=100063644704595" target="_blank"><img
-                            src="../assets/icons/bxl-facebook-circle.svg"></a>
+                            src="../assets/icons/bxl-facebook-circle.svg" alt="enlace a facebook"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link px-2 text-body-secondary"
                         href="https://www.youtube.com/@fundacioncofradiafundacion9782" target="_blank"><img
-                            src="../assets/icons/bxl-youtube.svg"></a>
+                            src="../assets/icons/bxl-youtube.svg" alt="enlace a youtube"></a>
                 </li>
             </ul>
-
             <p class="text-center ">Bariloche, Río Negro</p>
-
         </footer>
     </div>
-
-
     <!--Scripts-->
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-
-
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
