--- a/pages/orquesta.html
+++ b/pages/orquesta.html
@@ -8,35 +8,25 @@
     <link rel="stylesheet" href="../bootstrap/bootstrap.css">
     <!--mis estilos-->
     <link rel="stylesheet" href="../styles/styles.css">
-
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,300;0,400;0,500;0,700;0,800;0,900;1,300;1,400&display=swap"
         rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap"
         rel="stylesheet">
-
     <!--meta: description, keywords -->
     <meta name="description" content="Promoviendo la educación musical en Bariloche, formada por
     niños y adolescentes que estudian violín, viola, violoncello y contrabajo">
-
     <meta name="keywords" content="música, clases, educación, cultura, espectáculo, concierto, juvenil">
-
+    <!--title-->
     <title>Cofradía | La Orquesta</title>
-
     <!--favicon-->
     <link rel="icon" type="image/x-icon" sizes="32x32" href="../assets/icons/favicon_package_v0.16/favicon.ico">
-
 </head>
-
 <body>
     <header class="px-4">
         <nav class="nav navbar navbar-expand-md">
@@ -64,57 +54,40 @@
         </nav>
     </header>
     <!--Fin Header-->
-
     <main>
-
         <div class="orquesta__portada">
             <div class="portada-texto">
                 <h1>La Orquesta</h1>
-
                 <p>Enfocada en enseñar música y cultivar el talento de sus jóvenes miembros, esta formada por
                     niños y adolescentes que estudian violín, viola, violoncello y contrabajo.
                 </p>
-
-
             </div>
         </div>
-
         <section class="text__section">
-            <!-- <h2>Historia</h2> -->
-
-
-
             <p>Se trata de una iniciativa privada, fue fundada en San Carlos de Bariloche - 1995 - por Diego Díaz y
                 Kyoko Kurokawa quienes la siguen
                 dirigiendo en la actualidad. Dos apasionados de la música, que desde el principio se centraron en la
                 formación musical, brindando un espacio para que los jóvenes músicos aprendan juntos y mejoren sus
                 habilidades técnicas y expresivas, especialmente a través de la práctica orquestal.
             </p>
-
             <div class="orquesta__img">
                 <img src="../assets/img/fila-de-cellos.jpg" alt="fila de cellos">
             </div>
-
-
             <p>Teniendo la democratización de la educación musical como uno de sus pilares principales, otorgan
                 becas a estudiantes de bajos recursos económicos para garantizar que todos puedan
                 acceder a la música.
             </p>
-
             <p>Han tenido el honor de recibir la sabiduría musical de destacados músicos como Norberto García, Haydée
                 Francia (Algunos nombres más) en sus talleres.
             </p>
-
             <p>Con más de veinte años de experiencia, la orquesta se ha convertido en un referente cultural. Realizan
                 alrededor de veinte presentaciones al año en Bariloche y ciudades cercanas como San Martín de los Andes,
                 Villa la Angostura, El Bolsón y Las Grutas. Además, han cruzado fronteras y compartido su repertorio en
                 Chile, acompañando a músicos y grupos destacados.
             </p>
-
             <div class="orquesta__img">
                 <img src="../assets/img/orquesta-trenquelauquen.jpg" alt="fila de cellos">
             </div>
-
             <div class="video">
                 <div class="iframe">
                     <iframe src="https://www.youtube.com/embed/Z3SKQ9jd4Sw?si=DH17Qy6EYAIsn4l8"
@@ -127,85 +100,41 @@
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
-                </div>
-                <!-- width="560" height="315" -->
+                </div>     
             </div>
-
-
             <div class="orquesta__img">
                 <img src="../assets/img/orquesta-tedx.jpg" alt="Orquesta Cofradía en Trenquelauquen">
             </div>
-
-
-
-
         </section>
-
-        <div>
-            <img src="" alt="">
-        </div>
-
-        <!-- <section class="text__section">
-            <h2>Actuaciones con otras agrupaciones</h2>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur dolorum illo vitae magnam a hic
-                ut nemo, animi ipsum cumque quas optio adipisci, impedit dicta ex velit inventore exercitationem quasi!
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur dolorum illo vitae magnam a hic
-                ut nemo, animi ipsum cumque quas optio adipisci, impedit dicta ex velit inventore exercitationem quasi!
-            </p>
-
-        </section> -->
-
-
-
     </main>
-
-
-
-
     <!--Footer-->
     <div class="container-flex">
         <footer class="py-3 my-4 bg-secondary">
-
             <p class="text-center ">Desde 1995</p>
-
             <ul class="footer__ul nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a class="nav-link px-2 text-body-secondary"
-                        href="https://instagram.com/orquesta_cofradia?igshid=MzRlODBiNWFlZA==" target="_blank"><img
-                            src="../assets/icons/bxl-instagram.svg"></a>
+                        href="https://www.instagram.com/orquesta_cofradia/" target="_blank"><img
+                            src="../assets/icons/bxl-instagram.svg" alt="enlace a instagram"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link px-2 text-body-secondary"
                         href="https://www.facebook.com/profile.php?id=100063644704595" target="_blank"><img
-                            src="../assets/icons/bxl-facebook-circle.svg"></a>
+                            src="../assets/icons/bxl-facebook-circle.svg" alt="enlace a facebook"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link px-2 text-body-secondary"
                         href="https://www.youtube.com/@fundacioncofradiafundacion9782" target="_blank"><img
-                            src="../assets/icons/bxl-youtube.svg"></a>
+                            src="../assets/icons/bxl-youtube.svg" alt="enlace a youtube"></a>
                 </li>
             </ul>
-
             <p class="text-center ">Bariloche, Río Negro</p>
-
         </footer>
     </div>
-
-
     <!--Fin Footer-->
-
     <!--Scripts-->
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-
-
 </body>
 
 </html>
