arreglos en el texto -orquesta

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!--favicon-->
     <link rel="icon" type="image/x-icon" sizes="32x32" href="./assets/icons/favicon_package_v0.16/favicon.ico">
 </head>
+
 <body>
     <!-- Nav y header-->
     <header class="px-4 border-bottom">
@@ -183,9 +184,8 @@
             <p class="text-center ">Desde 1995</p>
             <ul class="footer__ul nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item">
-                    <a class="nav-link px-2 text-body-secondary"
-                        href="https://www.instagram.com/orquesta_cofradia/" target="_blank"><img
-                            src="./assets/icons/bxl-instagram.svg" alt="enlace a instagram"></a>
+                    <a class="nav-link px-2 text-body-secondary" href="https://www.instagram.com/orquesta_cofradia/"
+                        target="_blank"><img src="./assets/icons/bxl-instagram.svg" alt="enlace a instagram"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link px-2 text-body-secondary"
