--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -28,6 +28,7 @@
     <link rel="icon" type="image/x-icon" sizes="32x32" href="../assets/icons/favicon_package_v0.16/favicon.ico">
 </head>
 <!--body-->
+
 <body>
     <!-- Nav y header-->
     <header class="px-4 border-bottom actividades__header">
@@ -187,10 +188,12 @@
             <h2>Encuentro Juvenil de Música de Cámara</h2>
             <div>
                 <div class="actividades__img">
-                    <img class="img-thumbnail" src="../assets/img/concierto-para-dos-gitarras.jpg" alt="orquesta con guitarras">
+                    <img class="img-thumbnail" src="../assets/img/concierto-para-dos-gitarras.jpg"
+                        alt="orquesta con guitarras">
                 </div>
                 <p>
-                    El Encuentro está diseñado para jóvenes estudiantes de música, grupos de cámara, oyentes y el público en
+                    El Encuentro está diseñado para jóvenes estudiantes de música, grupos de cámara, oyentes y el
+                    público en
                     general, con el propósito de enriquecer tanto su experiencia musical como su desarrollo personal a
                     través de la hermosa práctica de la Música de Cámara.
                 </p>
@@ -212,13 +215,13 @@
             </div>
             <ul class="footer__ul nav justify-content-start">
                 <li class="nav-item">
-                    <a class="nav-link px-2" href="https://www.instagram.com/musicamarajuvenil/"
-                        target="_blank"><img src="../assets/icons/bxl-instagram.svg">@musicamarajuvenil
+                    <a class="nav-link px-2" href="https://www.instagram.com/musicamarajuvenil/" target="_blank"><img
+                            src="../assets/icons/bxl-instagram.svg">@musicamarajuvenil
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link px-2" href="https://www.facebook.com/EJMCbariloche"
-                        target="_blank"><img src="../assets/icons/bxl-facebook-circle.svg">EJMCbariloche FB
+                    <a class="nav-link px-2" href="https://www.facebook.com/EJMCbariloche" target="_blank"><img
+                            src="../assets/icons/bxl-facebook-circle.svg">EJMCbariloche FB
                     </a>
                 </li>
                 <li>
