--- a/pages/orquesta.html
+++ b/pages/orquesta.html
@@ -27,6 +27,7 @@
     <!--favicon-->
     <link rel="icon" type="image/x-icon" sizes="32x32" href="../assets/icons/favicon_package_v0.16/favicon.ico">
 </head>
+
 <body>
     <header class="px-4">
         <nav class="nav navbar navbar-expand-md">
@@ -78,7 +79,7 @@
                 acceder a la música.
             </p>
             <p>Han tenido el honor de recibir la sabiduría musical de destacados músicos como Norberto García, Haydée
-                Francia (Algunos nombres más) en sus talleres.
+                Francia, Daniel Gintolli y Jorge Caldelari en sus talleres.
             </p>
             <p>Con más de veinte años de experiencia, la orquesta se ha convertido en un referente cultural. Realizan
                 alrededor de veinte presentaciones al año en Bariloche y ciudades cercanas como San Martín de los Andes,
@@ -100,7 +101,7 @@
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
-                </div>     
+                </div>
             </div>
             <div class="orquesta__img">
                 <img src="../assets/img/orquesta-tedx.jpg" alt="Orquesta Cofradía en Trenquelauquen">
