agregue una pequeña animación y pequeña transición, un pequeño retoque al nav

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="description" content="Promoviendo la educación musical en Bariloche, con más de 20 años de trayectoria">
     <meta name="keywords" content="música, clases, educación, cultura, espectáculo, concierto, juvenil">
     <!--title-->
-    <title>Cofradía</title>
+    <title>Orquesta de Cámara Juvenil Cofradía</title>
     <!--favicon-->
     <link rel="icon" type="image/x-icon" sizes="32x32" href="./assets/icons/favicon_package_v0.16/favicon.ico">
 </head>
